Registration & Terms # fixed spacing - terms # set form wrapper width - mobile, desktop # removed font and padding resize after 768px - terms # fixed vertical page fill

--- a/asset/css/auth-common.css
+++ b/asset/css/auth-common.css
@@ -1,3 +1,16 @@
+.auth_left_form h3 {
+   text-align: center;
+   font-weight: 700;
+   font-size: 19px;
+   color: #4D4C52;
+}
+
+.auth_left_form {
+   padding: 24px;
+   max-width: 360px;
+   margin: auto;
+}
+
 .back_auth, .close_auth {
    min-width: 40px;
 }
@@ -6,6 +19,7 @@
 .auth_main_wrapper {
    display: flex;
    justify-content: space-between;
+   height: 100%;
 }
 
 .auth_form {
@@ -14,8 +28,8 @@
    flex-direction: column;
    justify-content: space-between;
    padding: 20px 80px 40px 80px;
-   min-height: 100vh;
-   max-height: 100vh;
+   min-height: 100%;
+   max-height: 100%;
 }
 
 @-moz-document url-prefix() { /* Disable scrollbar Firefox */
@@ -37,8 +51,8 @@
 
 .auth_right_banar {
    width: 50%;
-   max-height: 100vh;
-   min-height: 100vh;
+   max-height: 100%;
+   min-height: 100%;
    position: relative;
    background-image: url(../img/banner.png);
    background-size: cover;
