--- a/asset/css/registration-tearms.css
+++ b/asset/css/registration-tearms.css
@@ -1,12 +1,3 @@
-
-
-.re_terms_form_content h3 {
-   text-align: center;
-   font-weight: 700;
-   font-size: 19px;
-   color: #4D4C52;
-}
-
 .re_terms_form_content>p {
    text-align: center;
    margin-top: 40px;
@@ -102,6 +93,7 @@
 
 .re_terms_form_content .ter_form_box p a {
    color: #C4C2CD;
+   text-decoration: underline;
 }
 
 .re_terms_form_content .ter_form_box p a:hover {
@@ -119,35 +111,27 @@
       width: 100%;
    }
 
-   .re_terms_form_content h3 {
-      font-size: 16px;
-   }
-
-   .re_terms_form_content>p {
-      margin-top: 16px;
-      font-size: 12px;
-      line-height: 24px;
-   }
-
-   .re_terms_form_content .ter_form_box {
-      margin-top: 15px;
-   }
-
-   .re_terms_form_content .ter_form_box p {
-      margin-top: 22px;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 19px;
-   }
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
    .re_terms_form_content {
-      padding: 70px 0px;
+      padding:  0px;
   }
 }
 
 @media (max-width: 575px) {
+
+   .re_terms_form_content .ter_form_box p  {
+      margin-top: 24px;
+   }
+
+   .re_terms_form_content .ter_form_box  {
+      margin-top: 24px;
+   }
+
+   .re_terms_form_content>p {
+      margin-top: 24px;
+   }
 
    .re_terms_form_content .ter_form_box ul li a {
       width: 100%;
@@ -155,13 +139,5 @@
 
    .re_terms_form_content .ter_form_box .accept_register_btn {
       width: 100%;
-   }
-
-   .re_terms_form_content>p {
-      font-size: 12px;
-      line-height: 21px;
-   }
-   .re_terms_form_content{
-      padding: 30px 0px;
    }
 }
