--- a/asset/css/registration-user-details.css
+++ b/asset/css/registration-user-details.css
@@ -1,15 +1,3 @@
-
-
-.auth_user_details .top_title h3 {
-   font-weight: 700;
-   font-size: 19px;
-   color: #4D4C52;
-}
-
-.auth_left_form {
-   padding: 24px
-}
-
 .auth_user_details .user_details_form {
    margin-top: 48px;
 }
@@ -181,7 +169,8 @@
 
    .user_details_auth_form {
       max-height: 100vh;
-      overflow-y: scroll;
+      min-height: 100vh;
+      min-height: -webkit-fill-available;
    }
 }
 
@@ -204,7 +193,6 @@
    }
 
    .auth_user_details .user_details_form {
-   margin-top: 24px;
-}
-
+      margin-top: 24px;
+   }
 }
